scripts/scenario-5/mirroring/movies-gw-dr-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: movies-api-gateway
  namespace: fast-track-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-movies-api-gateway
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies-api-vservice
  namespace: fast-track-istio
spec:
  hosts:
    - "*"
  gateways:
    - movies-api-gateway
  http:
     - route:
        - destination:
            host: movies-api-service
            port:
              number: 3000
            subset: v1
          weight: 100
       mirror:
            host: movies-api-service
            port:
              number: 3000
            subset: v2
       mirror_percent: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: movies-api-destination
  namespace: fast-track-istio
spec:
  host: movies-api-service
  subsets:
    - name: v1
      labels:
        version: "1"
    - name: v2
      labels:
        version: "2"
